created basic page layout/style

--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+			integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+			crossorigin="anonymous"
+		/>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<title>Document</title>
 	</head>
 	<body>
+		<header>
+			<h1 class="header-items">Home</h1>
+			<h1 class="header-items">About Me</h1>
+			<h1 class="header-items">Projects</h1>
+			<h1 class="header-items">Contact Me</h1>
+		</header>
+		<section class="container-fluid" id="about-me">
+			<div class="row">
+				<div class="col-6 row">
+					<h1 class="col-6" id="about-me-title">About Me</h1>
+					<img
+						id="avatar"
+						class="col-6"
+						src="./assets/images/BlakeWright.jpg"
+						alt=""
+					/>
+				</div>
+				<div class="col-6">
+					<h2>
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni impedit at
+						excepturi maiores! Veniam qui, sapiente vitae maiores eos alias, dolorem
+						cumque ipsam, voluptatum fugit ducimus labore possimus quis asperiores?
+					</h2>
+				</div>
+			</div>
+		</section>
+		<section class="container-fluid" id="featured-project">
+			<h1>featured project</h1>
+		</section>
+		<section class="container-fluid" id="other-projects">
+			<h1>other Projects</h1>
+		</section>
+		<section id="contact-me" class="container-fluid">
+			<h1>contact me</h1>
+		</section>
+		<footer>
+			<h1>footer</h1>
+		</footer>
 		<script src="./assets/js/script.js"></script>
 	</body>
 </html>
