--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
 						/>
 					</a>
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
+						<h5 class="card-title">Password Generator Application</h5>
 						<p class="card-text">
-							This card has supporting text below as a natural lead-in to additional
-							content.
+							Generate a brand new random password based on 4 input criteria chosen by
+							the user. You are also guaranteed to get at least 1 character from each
+							chosen criteria. Check it out by clicking the image above!
 						</p>
 						<a href="https://github.com/BTDubbzzz/Password-Generator">
 							<p class="card-text">
