changed doc type to pdf for resume

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					<h4>current resume</h4>
 					<a
 						id="resume-link"
-						href="./assets/documents/Blake Wright Resume.docx"
+						href="./assets/documents/Blake Wright Resume.pdf"
 						download="Blake Wright resume"
 					>
 						<p>download current resume</p>
